# osuBasil

./: .dockerignore  .env.example  .gitignore  Bancho.slnx  Basil.sln.DotSettings  Basil.slnx  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  OpenOsuTournament.Bancho.slnx  README.md  docker-compose.dev.yml  docker-compose.yml  note.md
.claude/plans/: multiplayer-review.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.run/: Bancho.Web_ http.run.xml  Bancho.Web_ https.run.xml  Basil.Web.run.xml  Database & Server.run.xml  Database.run.xml  Debug.run.xml  Debug_ http.run.xml  Debug_ https.run.xml
docs/: api-client.md  api-external.md  api-reference.md  architecture.md  bot-commands.md  getting-started.md  privileges.md  run-deployment.md  scope-decisions.md  working-scopes.md
native/bancho-pp-ffi/: Cargo.toml
native/bancho-pp-ffi/src/: lib.rs
src/Bancho.Application/: AssemblyMarker.cs  Bancho.Application.csproj
src/Bancho.Domain/: Action.cs  AdaptersStringParser.cs  AssemblyMarker.cs  Beatmap.cs  ClientDetails.cs  ClientFlags.cs  ClientIpResolver.cs  CountryCodes.cs  GameMode.cs  Geolocation.cs  GeolocationHeaderParser.cs  Grade.cs  LeaderboardType.cs  LoginData.cs  LoginDataParser.cs  MatchEnums.cs  Mods.cs  OsuVersion.cs  OsuVersionParser.cs  PresenceFilter.cs  Privileges.cs  RankedStatus.cs  SafeName.cs  ScoreAccuracyCalculator.cs  ScoreChecksum.cs  ScoreSubmission.cs  ScoreSubmissionValidation.cs  SlotStatus.cs  SubmissionStatus.cs
src/Bancho.Infrastructure/: AssemblyMarker.cs  Bancho.Infrastructure.csproj  GuidTokenGenerator.cs  (+1 more)
(+1339 files in other folders)
