[package]
name = "bancho-pp-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Thin C ABI wrapper around akatsuki-pp for consumption from Bancho.Infrastructure via P/Invoke."

[lib]
name = "bancho_pp_ffi"
crate-type = ["cdylib"]

[dependencies]
# Pinned to the exact revision that akatsuki-pp-py==1.0.5 (bancho.py's current pp dependency)
# depends on, so computed pp values match the Python server bit-for-bit.
akatsuki-pp = { git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "b96019f50aa7d09bcbde60016481a69df04315e4" }

[profile.release]
lto = "fat"
codegen-units = 1
